--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
                 android:id="@+id/topAppBar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:title="page_title"
+                app:title="Chat"
                 app:navigationIcon="@drawable/ic_menu_24dp"
                 android:background="@android:color/transparent"
                 style="@style/Widget.MaterialComponents.Toolbar.Primary"
