--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -15,7 +15,11 @@
             app:destination="@id/mainFragment"
             app:popUpTo="@id/authFragment"
             app:popUpToInclusive="true" />
+        <argument
+            android:name="ShowAppBar"
+            android:defaultValue="false" />
     </fragment>
+
     <fragment
         android:id="@+id/mainFragment"
         android:name="com.cyberburyatenterprise.textme.view.MainFragment"
@@ -30,10 +34,19 @@
             android:id="@+id/action_mainFragment_to_settingsFragment"
             app:destination="@id/settingsFragment"
             app:popUpTo="@id/mainFragment" />
+        <argument
+            android:name="ShowAppBar"
+            android:defaultValue="true" />
     </fragment>
+
     <fragment
         android:id="@+id/settingsFragment"
         android:name="com.cyberburyatenterprise.textme.view.SettingsFragment"
         android:label="fragment_settings"
-        tools:layout="@layout/fragment_settings" />
+        tools:layout="@layout/fragment_settings">
+        <argument
+            android:name="ShowAppBar"
+            android:defaultValue="false" />
+    </fragment>
+
 </navigation>
